--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "cors": "^2.7.1",
     "express": "^4.13.3",
     "lodash": "^4.17.11",
+    "mathjs": "^5.9.0",
     "morgan": "^1.8.0",
     "randomstring": "^1.1.5",
     "resource-router-middleware": "^0.6.0",
