--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "brint",
+  "name": "brint-server",
   "version": "0.3.0",
   "description": "Starter project for an ES6 RESTful Express API",
   "main": "dist",
